integrate neo-hpstr nav bar into alembic

--- a/404.md
+++ b/404.md
@@ -4,10 +4,11 @@ excerpt: "Page Not Found"
 permalink: 404.html
 indexing: false
 sitemap: false
+layout: page
 ---
 
 Sorry, but the page could not be found.
 
 Are you looking for:
 
-{% include nav-header.html %}
+<!-- {% include nav-header.html %} -->
